Thu Dec 31 17:46:10 UTC 2009  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/config/ace_fl.mpb: Rather than add
          PLATFORM_GL_LDFLAGS twice, one should be PLATFORM_X11_LDFLAGS.
          Thanks to Aaron Scamehorn for catching this.

Thu Dec 31 17:24:14 UTC 2009  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: If both static_libs_only
          and shared_libs_only are set, report the error and stop. Thanks to
          Howard Finer for reporting this.

Thu Dec 31 12:27:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Fixed fuzz check for Spawn with Stop

Wed Dec 30 08:41:03 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Sig_Handler.cpp:
          Do not use SA_SIGINFO on LynxOS.

Thu Dec 24 10:55:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/RPC/run_test.pl
        * performance-tests/SCTP/run_spectrum.pl
        * performance-tests/TCP/run_test.pl
        * performance-tests/UDP/run_test.pl
          Fuzz fixes

Thu Dec 24 10:49:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/tests/HTBP/ping/run_test.pl
        * protocols/tests/HTBP/Reactor_Tests/run_test.pl
        * protocols/tests/HTBP/Send_Large_Msg/run_test.pl
        * protocols/tests/HTBP/Send_Recv_Tests/run_test.pl
        * tests/run_test.pl
          Fixed fuzz

Thu Dec 24 10:20:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/Bool_Array.h:
        * apps/gperf/src/Key_List.h:
          Fixes for C++ Builder 2010 Update 4/5

Thu Dec 24 09:54:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_string.cpp:
          Const changes, layout changes, call ACE_OS::strncat instead of
          strncat directly

        * ace/Log_Msg.cpp:
        * ace/Log_Msg.h:
          Const changes

        * ace/config-win32-borland.h: