@@ -152,9 +152,12 @@ ACE_High_Res_Timer::get_cpuinfo (void)
             {
               // If the line "cpu MHz : xxx" is present, then it's a
               // reliable measure of the CPU speed - according to the
-              // kernel-source.
-              scale_factor = (ACE_UINT32) (mhertz + 0.5);
-              break;
+              // kernel-source. It's possible to see a 0 value reported.
+              if (mhertz > 0.0)
+                {
+                  scale_factor = (ACE_UINT32) (mhertz + 0.5);
+                  break;
+                }
             }
           else if (::sscanf (buf, "bogomips : %lf\n", &bmips) == 1
                    || ::sscanf (buf, "BogoMIPS : %lf\n", &bmips) == 1)
